--- a/assets/views/chatWithFriend.html
+++ b/assets/views/chatWithFriend.html
@@ -16,7 +16,6 @@
         </span>
     </div>
     <div class="panel-heading" style="background-color:white; font-weight: 100; border-bottom: 1px solid #ddd">
-
         <div style="margin-top: 10px;">
             <div class="media-body">
                 <div class="media">
@@ -25,10 +24,10 @@
                              ng-src="{{result.profilePic}}"/>
                     </a>
                     <div class="media-body" style="font-size: 80%;">
-                        <b style="font-family:Verdana;">{{result.username}}</b>
+                        <b style="font-family:Verdana; color:black;">{{result.username}}</b>
                         <br/>
                         <small class="text-muted"><i class="fa fa-circle" aria-hidden="true" style="color: #0C0;">
-                        </i> <span style="font-family:Verdana;">Watching: {{result.watching}}</span>
+                        </i> <span style="font-family:Verdana;">Watching: {{result.watching}}The office</span>
                         </small>
                     </div>
                     <button ng-click="goToChat()" class="btn btn-default pull-right" style="margin-top: -30px;">
@@ -87,33 +86,68 @@
     </div>
     <div class="panel-footer">
         <div ng-show="emoticons" style="margin-bottom: 5px;">
-            <button style="outline: none; margin-left: 10px;" class="btn btn-default" ng-click="append(128512)"><span
-                    style="margin-left: -3px;">&#128512;</span></button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128513;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128514;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128515;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128516;</span>
-            </button>
-            <button style="outline: none; margin-left: 10px;" class="btn btn-default"><span style="margin-left: -3px;">&#128517;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128518;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128519;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128520;</span>
-            </button>
-            <button style="outline: none" class="btn btn-default"><span style="margin-left: -3px;">&#128521;</span>
-            </button>
+            <span ng-click="append(128522)" style="font-size: 120%">&#128522;</span>
+            <span ng-click="append(128516)" style="font-size: 120%">&#128516;</span>
+            <span ng-click="append(128515)" style="font-size: 120%">&#128515;</span>
+            <span ng-click="append(128521)" style="font-size: 120%">&#128521;</span>
+            <span ng-click="append(128525)" style="font-size: 120%">&#128525;</span>
+            <span ng-click="append(128536)" style="font-size: 120%">&#128536;</span>
+            <span ng-click="append(128538)" style="font-size: 120%">&#128538;</span>
+            <span ng-click="append(128524)" style="font-size: 120%">&#128524;</span>
+            <span ng-click="append(128513)" style="font-size: 120%">&#128513;</span>
+            <span ng-click="append(128540)" style="font-size: 120%">&#128540;</span>
+            <span ng-click="append(128541)" style="font-size: 120%">&#128541;</span>
+            <span ng-click="append(128530)" style="font-size: 120%">&#128530;</span>
+
+            <span ng-click="append(128527)" style="font-size: 120%">&#128527;</span>
+            <span ng-click="append(128531)" style="font-size: 120%">&#128531;</span>
+            <span ng-click="append(128532)" style="font-size: 120%">&#128532;</span>
+            <span ng-click="append(128542)" style="font-size: 120%">&#128542;</span>
+            <span ng-click="append(128549)" style="font-size: 120%">&#128549;</span>
+            <span ng-click="append(128560)" style="font-size: 120%">&#128560;</span>
+            <span ng-click="append(128552)" style="font-size: 120%">&#128552;</span>
+            <span ng-click="append(128547)" style="font-size: 120%">&#128547;</span>
+
+            <span ng-click="append(128546)" style="font-size: 120%">&#128546;</span>
+            <span ng-click="append(128557)" style="font-size: 120%">&#128557;</span>
+            <span ng-click="append(128514)" style="font-size: 120%">&#128514;</span>
+            <span ng-click="append(128562)" style="font-size: 120%">&#128562;</span>
+            <span ng-click="append(128561)" style="font-size: 120%">&#128561;</span>
+            <span ng-click="append(128544)" style="font-size: 120%">&#128544;</span>
+            <span ng-click="append(128545)" style="font-size: 120%">&#128545;</span>
+            <span ng-click="append(128554)" style="font-size: 120%">&#128554;</span>
+
+            <span ng-click="append(128567)" style="font-size: 120%">&#128567;</span>
+            <span ng-click="append(128125)" style="font-size: 120%">&#128125;</span>
+            <span ng-click="append(128148)" style="font-size: 120%">&#128148;</span>
+            <span ng-click="append(128152)" style="font-size: 120%">&#128152;</span>
+            <span ng-click="append(127775)" style="font-size: 120%">&#127775;</span>
+            <span ng-click="append(128164)" style="font-size: 120%">&#128164;</span>
+            <span ng-click="append(128168)" style="font-size: 120%">&#128168;</span>
+            <span ng-click="append(128166)" style="font-size: 120%">&#128166;</span>
+
+            <span ng-click="append(127926)" style="font-size: 120%">&#127926;</span>
+            <span ng-click="append(128293)" style="font-size: 120%">&#128293;</span>
+            <span ng-click="append(128169)" style="font-size: 120%">&#128169;</span>
+            <span ng-click="append(128077)" style="font-size: 120%">&#128077;</span>
+            <span ng-click="append(128078)" style="font-size: 120%">&#128078;</span>
+            <span ng-click="append(128076)" style="font-size: 120%">&#128076;</span>
+            <span ng-click="append(128074)" style="font-size: 120%">&#128074;</span>
+            <span ng-click="append(128075)" style="font-size: 120%">&#128075;</span>
+
+            <span ng-click="append(128080)" style="font-size: 120%">&#128080;</span>
+            <span ng-click="append(128070)" style="font-size: 120%">&#128070;</span>
+            <span ng-click="append(128071)" style="font-size: 120%">&#128071;</span>
+            <span ng-click="append(128073)" style="font-size: 120%">&#128073;</span>
+            <span ng-click="append(128072)" style="font-size: 120%">&#128072;</span>
+            <span ng-click="append(128588)" style="font-size: 120%">&#128588;</span>
         </div>
-        <form ng-submit="sendMessage()">
-            <input id="messageToBeSent" style="font-family:Verdana; float:left; width:190px; font-size: 70%;"
-                   ng-model="message.content" type="text" class="form-control"
+        <form ng-submit="sendMessage()" autocomplete="off">
+            <input id="messageToBeSent" style="float:left; width:190px; font-size: 80%; font-family:Verdana;"
+                   ng-model="message.content" type="text" class="form-control" ng-init="message.content=''"
                    autofocus/>
-            <button class="btn btn-default" style="outline: none; width: 20px;" type="button"><span
-                    style="margin-left: -9px;" ng-click="emoticons = !emoticons;">&#128512;</span></button>
+            <button ng-click="emoticons = !emoticons;" class="btn btn-default" style="outline: none; width: 20px;" type="button"><span
+                    style="margin-left: -9px;" >&#128512;</span></button>
         </form>
     </div>
 </div>
